Fix form submission and add overflow-y to completed task lists

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -259,3 +259,8 @@ img {
 .btn-expand:hover:after {
   font-weight: 700;
 }
+
+.collapse.show {
+  max-height: 100px;
+  overflow-y: scroll;
+}
